--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack-dev-server",
-    "eslint": "eslint --ext .jsx --ext .js src/",
+    "eslint": "eslint --ext .tsx --ext .ts src/",
     "test": "npm run eslint"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
     "@babel/preset-env": "7.8.7",
     "@babel/preset-react": "7.8.3",
-    "babel-loader": "8.1.0",
-    "eslint": "5.13.0",
+    "@babel/preset-typescript": "7.10.4",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "eslint": "7.10.0",
+    "eslint-config-airbnb-typescript": "11.0.0",
     "eslint-config-htmlacademy": "0.5.2",
-    "eslint-plugin-react": "7.18.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.21.2",
+    "eslint-plugin-react-hooks": "4.1.2",
     "stylelint-config-htmlacademy": "0.1.4",
+    "ts-loader": "8.0.4",
+    "typescript": "4.0.3",
     "webpack": "4.41.6",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.10.3"
