--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-react": "7.21.2",
     "eslint-plugin-react-hooks": "4.1.2",
     "prettier": "2.1.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "stylelint-config-htmlacademy": "0.1.4",
     "ts-loader": "8.0.4",
     "typescript": "4.0.3",
