--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "7.8.3",
     "@babel/preset-typescript": "7.10.4",
     "@types/react": "16.9.49",
+    "@types/react-dom": "16.9.8",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "eslint": "7.10.0",
     "eslint-config-airbnb-typescript": "11.0.0",
