--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -29,6 +29,14 @@ rules:
   '@typescript-eslint/quotes':
     - error
     - backtick
+  '@typescript-eslint/comma-dangle':
+    - error
+    - only-multiline
+    - arrays: never
+      objects: always
+      imports: never
+      exports: never
+      functions: never
   react/prop-types: off
   # because of prettier
   react/jsx-one-expression-per-line: off
