--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "react-router-dom": "5.1.2"
   },
   "devDependencies": {
     "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
+    "@types/react-router-dom": "5.1.5",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "eslint": "7.10.0",
     "eslint-config-airbnb-typescript": "11.0.0",
