module2-task1: * eslint config

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -37,6 +37,12 @@ rules:
       imports: never
       exports: never
       functions: never
+  jsx-a11y/label-has-associated-control:
+    - error
+    - required:
+        some:
+        - nesting
+        - id
   react/prop-types: off
   # because of prettier
   react/jsx-one-expression-per-line: off
