--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -44,5 +44,6 @@ rules:
         - nesting
         - id
   react/prop-types: off
+  import/prefer-default-export: off
   # because of prettier
   react/jsx-one-expression-per-line: off
