module3-task1: * eslint config

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -27,6 +27,9 @@ settings:
     version: '16'
 
 rules:
+  import/extensions:
+  - error
+  - never
   '@typescript-eslint/quotes':
     - error
     - backtick
