--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -49,5 +49,6 @@ rules:
         - id
   react/prop-types: off
   import/prefer-default-export: off
+  default-case: off
   # because of prettier
   react/jsx-one-expression-per-line: off
