--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-airbnb-typescript": "11.0.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-config-prettier": "6.12.0",
+    "eslint-import-resolver-alias": "1.1.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.21.2",
