--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "enzyme-to-json": "3.6.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-router-dom": "5.1.2",
-    "uuid": "8.3.1"
+    "react-router-dom": "5.1.2"
   },
   "devDependencies": {
     "@babel/preset-env": "7.8.7",
@@ -29,7 +28,6 @@
     "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.5",
-    "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "babel-jest": "25.1.0",
     "eslint": "7.10.0",
