--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "stylelint-config-htmlacademy": "0.1.4",
     "ts-loader": "8.0.4",
     "typescript": "4.0.3",
+    "utility-types": "3.10.0",
     "webpack": "4.41.6",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.10.3"
