--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -49,6 +49,7 @@ rules:
         - nesting
         - id
   react/prop-types: off
+  react/jsx-props-no-spreading: off
   import/prefer-default-export: off
   default-case: off
   import/extensions: off
