--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "enzyme-to-json": "3.6.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-router-dom": "5.1.2"
+    "react-router-dom": "5.1.2",
+    "utility-types": "3.10.0"
   },
   "devDependencies": {
     "@babel/preset-env": "7.8.7",
@@ -45,7 +46,6 @@
     "stylelint-config-htmlacademy": "0.1.4",
     "ts-loader": "8.0.4",
     "typescript": "4.0.3",
-    "utility-types": "3.10.0",
     "webpack": "4.41.6",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.10.3"
