--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "enzyme-to-json": "3.6.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-redux": "7.2.1",
     "react-router-dom": "5.1.2",
+    "redux": "4.0.5",
     "utility-types": "3.10.0"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/jest": "26.0.14",
     "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
+    "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "babel-jest": "25.1.0",
