--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "7.2.1",
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
     "utility-types": "3.10.0"
   },
   "devDependencies": {
