--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
+    "redux-mock-store": "1.5.4",
     "utility-types": "3.10.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
+    "@types/redux-mock-store": "1.0.2",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "babel-jest": "25.1.0",
     "eslint": "7.10.0",
