--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "npm run eslint && jest"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "clsx": "1.1.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
