--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
+    "redux-thunk": "2.3.0",
     "utility-types": "3.10.0"
   },
   "devDependencies": {
