--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
     "enzyme-to-json": "3.6.1",
+    "history": "4.10.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.2.1",
