--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-router-dom": "5.1.5",
     "@types/redux-mock-store": "1.0.2",
     "@typescript-eslint/eslint-plugin": "4.3.0",
+    "axios-mock-adapter": "1.17.0",
     "babel-jest": "25.1.0",
     "eslint": "7.10.0",
     "eslint-config-airbnb-typescript": "11.0.0",
